--- a/To Do List/index.html
+++ b/To Do List/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App JavaScript | Prabhave Tailor</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -19,7 +19,7 @@
       <button><i class="fas fa-plus"></i></button>
     </div>
     <ul class="todoList">
-      <!-- data are comes from local storage -->
+      
     </ul>
     <div class="footer">
       <span>You have <span class="pendingTasks"></span> pending tasks</span>
