--- a/pomodoro timer/index.html
+++ b/pomodoro timer/index.html
@@ -37,9 +37,9 @@
     </div>
 
     <form action=".">
-      <label for="focusTime">Focus Time</label>
+      <label for="focusTime" class="fandbtime">Focus Time</label>
       <input type="number" value="1" id="focusTime" />
-      <label for="breakTime">Break Time</label>
+      <label for="breakTime" class="fandbtime">Break Time</label>
       <input type="number" value="1" id="breakTime" />
       <button type="submit" class="d">Save settings</button>
     </form>
