my all projects

--- a/3d flip card/index.html
+++ b/3d flip card/index.html
@@ -23,7 +23,7 @@
           <img src="profileimage.jpg" />
           <div class="details">
             <h2>Prabhave Tailor</h2>
-            <span>Young Coder</span>
+            <span>Programmer</span>
           </div>
         </div>
         <div class="back">
