--- a/pomodoro timer/index.html
+++ b/pomodoro timer/index.html
@@ -21,7 +21,7 @@
       <svg class="progress-ring" height="120" width="120">
         <circle
           class="progress-ring__circle"
-          stroke-width="8"
+          stroke-width="10px"
           fill="transparent"
           r="50"
           cx="60"
