my all projects

--- a/Disable Text Selection/index.html
+++ b/Disable Text Selection/index.html
@@ -16,8 +16,8 @@
       similique quo repellendus veritatis qui, possimus esse molestiae alias
       dolorum labore cumque repellat modi quisquam totam nisi. Autem aliquam
       tenetur delectus, saepe quod accusantium maxime deserunt a perspiciatis
-      aspernatur sequi mollitia earum, quos dolores, itaque obcaecati aut
-      consequatur iste optio? Quia voluptate inventore fugiat earum ad nemo ex
+      aspernatur sequi mollitquos dolores, itaque obcaecati aut
+      consequatur iste optio? Quia voluptaia earum, te inventore fugiat earum ad nemo ex
       facere quae quo! Dolore, ab, atque commodi laudantium ut dolor, incidunt
       illo illum dolorem fugiat amet!
     </p>
