my all projects

--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
+        <header>Weather App <hr></header>
         <form id="form">
             <input
                 type="text"
