--- a/3d flip card/index.html
+++ b/3d flip card/index.html
@@ -27,13 +27,13 @@
           </div>
         </div>
         <div class="back">
-          <a href="#" class="icon">
+          <a href="https://www.instagram.com/" target="_blank" class="icon">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#" class="icon">
+          <a href="https://www.facebook.com/" target="_blank"class="icon">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="icon">
+          <a href="https://twitter.com/" target="_blank"class="icon">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
